# microlator

./: .clang-format  .clang-tidy  CMakeLists.txt  readme.md
src/: cpu.cpp  cpu.hpp
test/: .clang-tidy  CMakeLists.txt  nestest.hpp  testCPU.cpp
